# DuyControl

./: CMakeLists.txt  Makefile  README.md  main.c
core/: CMakeLists.txt  queue.c  state.h  system.c  system.h
core/inc/: queue.h
core/src/: CMakeLists.txt  state.c  system.c
service/: CMakeLists.txt  i2c_service.h
ui/: CMakeLists.txt  ui.h  ui_main_menu.h  ui_rasp_select.c  ui_rasp_select.h  ui_rasp_tools.c  ui_rasp_tools.h  ui_state.h
ui/inc/: ui.h  ui_main_menu.h  ui_rasp_select.h  ui_rasp_tools.h  ui_state.h
ui/src/: CMakeLists.txt  ui.c  ui_main_menu.c  ui_state.c
